2006-02-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp.spec.in: Changes in `Name', `Version' and `Release'
	definitions. Removed distribution dependent release settings. 
	Added DESTDIR to make install command.

	* configure.ac, Makefile.am: Added RPM's spec file to the
	distribution package. Added RPM_RELEASE variable to the
	configure.ac. 

	* config/acx_cblas.m4: Added support for detecting libgslcblas

	* config/acx_fft.m4: Minor fixes to the FFT detection routines.
	Now, MKL and ACML FFT routines are searched in the default BLAS
	library first; even if BLAS was defined explicitly using
	`--with-blas' switch.

2006-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/itfile.doc, doc/tutorial/rayleigh.doc,
	doc/tutorial/src/Makefile.am, doc/tutorial/src/rayleigh.cpp,
	doc/tutorial/src/read_it_file.cpp, doc/tutorial/src/sources.mk,
	doc/tutorial/src/write_it_file.cpp: Updated tutorial example
	programs and their description. Removed unnecessary reference
	files for the tutorial programs. (merged from itpp-3-9-branch)

	* extras/Makefile.am: Matlab/Octave itload.m and itsave.m scripts
	are now installed into $PREFIX/share/doc (merged from
	itpp-3-9-branch)

2006-02-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/newton_search_test.cpp, tests/newton_search_test.ref:
	Fixed precision problems when using MKL

2006-02-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/transforms.cpp, tests/transforms_test.cpp,
	tests/transforms_test.ref: Bug-fixes in FFT/IFFT functions based
	on ACML library. Temporary `comm' vectors are now allocated
	dynamically when neccessary. This fixes segmentation faults in
	sigfun and filter_design test programs.

2006-02-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, doc/local/index.doc.in, doc/local/installation.doc:
	Documentation updated to reflect recent changes in configuration's
	scripts

	* configure.ac: Cosmetic changes in displayed report
