@@ -53,9 +53,9 @@ namespace itpp {
   class Channel_Code {
   public:
     //! 
-    Channel_Code(){}
+    Channel_Code() {}
     //! 
-    //virtual ~Channel_Code(){}
+    virtual ~Channel_Code() {}
 
     //! Encode a bvec of input
     virtual void encode(const bvec &uncoded_bits, bvec &coded_bits) = 0;
@@ -88,9 +88,9 @@ namespace itpp {
   class Dummy_Code : public Channel_Code {
   public:
     //! 
-      Dummy_Code() {}
+    Dummy_Code() {}
     //! 
-    virtual ~Dummy_Code(){}
+    virtual ~Dummy_Code() {}
 
     //! Encode a bvec of input
     virtual void encode(const bvec &uncoded_bits, bvec &coded_bits) { coded_bits = uncoded_bits; }
